Group deletion now works.

--- a/MicroSocialPlatform/Views/Group/Index.cshtml
+++ b/MicroSocialPlatform/Views/Group/Index.cshtml
@@ -84,7 +84,7 @@
                 Edit
             </button>
         </form>
-        <form method="get" asp-route="delete_group" asp-route-id="@Model.Id" style="display: contents;">
+        <form method="post" asp-route="delete_group" asp-route-id="@Model.Id" style="display: contents;">
             <button type="submit" class="edit-group-button">
                 <ion-icon name="trash-outline"></ion-icon>
                 Delete
