--- a/MicroSocialPlatform/wwwroot/css/Group.css
+++ b/MicroSocialPlatform/wwwroot/css/Group.css
@@ -233,8 +233,15 @@
     left: 60px;
 }
 
-.menu,.mess-menu{
+.menu{
     position: absolute;
+    right: 10px;
+    top: 20px;
+    width: 10px;
+    height: 20px;
+    cursor: pointer;
+}
+.mess-menu{
     right: 10px;
     top: 20px;
     width: 10px;
@@ -296,6 +303,7 @@
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 .bubble .info {
     padding: 10px 10px 10px 12px;
@@ -316,6 +324,15 @@
 .bubble .info .user-mess {
     color: whitesmoke;
     font-size: 1.3rem;
+}
+.bubble .info .top-part-mess{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.bubble .info .time{
+    margin-left: auto;
+    font-size: 0.6rem;
 }
 .typing {
     position: absolute;
