--- a/MicroSocialPlatform/wwwroot/css/Group.css
+++ b/MicroSocialPlatform/wwwroot/css/Group.css
@@ -369,13 +369,17 @@
 .bubble {
     width: 100%;
     position: relative;
-    display: inline-block;
     margin-bottom: 5px;
+    display: flex;
+    flex-direction: row;
 }
 
 .bubble .sent {
     background: #79bfc7c4;
     float: right;
+    margin-left: auto;
+    position: relative;
+    right: -20%;
 }
 
 .bottom-bar {
@@ -446,9 +450,8 @@
     align-items: center;
     float: right;
     justify-content: center;
-    position: absolute;
-    right: -13%;
-    top: 39px;
+    position: relative;
+    top: 2vh;
     width: 20%;
     display: flex;
     flex-direction: column;
