--- a/MicroSocialPlatform/Views/Shared/MenuBar.cshtml
+++ b/MicroSocialPlatform/Views/Shared/MenuBar.cshtml
@@ -10,7 +10,8 @@
     var profileClass = currentController == "Profile" ? "active" : "";
     var homeClass = currentController == "Home" ? "active" : "";
     var peopleClass = currentController == "People" ? "active" : "";
-    var groupClass= currentController == "Group" ? "active" : "";
+    var friendClass = currentController == "Friends" ? "active" : "";
+    var groupClass = currentController == "Group" ? "active" : "";
     Profile? profile = null;
     if (signedIn)
     {
@@ -43,6 +44,14 @@
                     <ion-icon name="person-circle-outline"></ion-icon>
                 </span>
                 <span class="title">People</span>
+            </a>
+        </li>
+        <li class="list @friendClass">
+            <a href="/friends">
+                <span class="icon">
+                    <ion-icon name="person-circle-outline"></ion-icon>
+                </span>
+                <span class="title">Friends</span>
             </a>
         </li>
         <li class="list">
