Added profile images.

--- a/MicroSocialPlatform/Views/Post/Index.cshtml
+++ b/MicroSocialPlatform/Views/Post/Index.cshtml
@@ -1,9 +1,8 @@
 @model Post 
+@using MicroSocialPlatform.Misc;
 @{
     Layout = "MyLayout";
     ViewData["Title"] = "Show Post";
-    string defaultImageSource = "https://cdn.pixabay.com/photo/2015/04/23/21/59/tree-736877__480.jpg";
-    string postImagePath = Model.ImageFilename != null ? Model.ImageFilename : defaultImageSource; 
 }
 <section class="post-with-comments">
     <div class="post-s">
@@ -28,7 +27,7 @@
                     <p class="post-title">@Model.Title</p>
                     <p class="text">@Model.Content</p>
                 </div>
-                <img src="@postImagePath" alt="">
+                <img src="@IOHelper.imageOrDefault(Model.ImageFilename)" alt="">
             </div>
         </div>
 
