--- a/MicroSocialPlatform/Views/Home/PostPartial.cshtml
+++ b/MicroSocialPlatform/Views/Home/PostPartial.cshtml
@@ -1,12 +1,9 @@
+@using MicroSocialPlatform.Misc
 @model Post 
-@{
-    string defaultImageSource = "https://cdn.pixabay.com/photo/2015/04/23/21/59/tree-736877__480.jpg";
-    string postImagePath = Model.ImageFilename != null ? Model.ImageFilename : defaultImageSource;
-}
 
 <div class="post">
     <div class="post-header">
-        <img src="https://cdn.pixabay.com/photo/2015/04/23/21/59/tree-736877__480.jpg" class="user-icon" alt="">
+        <img src="@IOHelper.imageOrDefault(Model.User.UserProfile.ImageFilename)" class="user-icon" alt="">
         <form method="get" asp-route="profile" asp-route-id="@Model.User.UserProfile.Id" class="link-to-user">
             <button type="submit" class="user-button">
                 <p class="username">@Model.User.UserName</p>
@@ -30,7 +27,7 @@
                     <p class="text">@Model.Content</p>
                 </button>
             </form>
-            <img src="@postImagePath" alt="">
+            <img src="@IOHelper.imageOrDefault(Model.ImageFilename)" alt="">
         </div>
     </div>
 
