--- a/MicroSocialPlatform/Views/Post/New.cshtml
+++ b/MicroSocialPlatform/Views/Post/New.cshtml
@@ -19,7 +19,7 @@
         <div class="add-content">
         @Html.Label("Content", "Content")
       
-        @Html.EditorFor(p => p.Content)
+        @Html.TextArea("Content",null,new {@class ="summernote"})
    
         @Html.ValidationMessageFor(p => p.Content, null)
         
