--- a/MicroSocialPlatform/Views/Home/PostPartial.cshtml
+++ b/MicroSocialPlatform/Views/Home/PostPartial.cshtml
@@ -24,7 +24,9 @@
             <form method="get" asp-route="post" asp-route-id="@Model.Id" class="text-cont">
                 <button type="submit" class="post-button">
                     <p class="post-title">@Model.Title</p>
-                    <p class="text">@Model.Content</p>
+                    <div class="text">
+                        @Html.Raw(Model.Content)
+                    </div>
                 </button>
             </form>
             <img src="@IOHelper.imageOrDefault(Model.ImageFilename,IOHelper.DefaultPostImage)" alt="">
