--- a/MicroSocialPlatform/Views/Shared/MyLayout.cshtml
+++ b/MicroSocialPlatform/Views/Shared/MyLayout.cshtml
@@ -17,11 +17,23 @@
     <link rel="stylesheet" type="text/css" href="~/css/People.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/Group.css" asp-append-version="true">
 
+    <!-- including summernote css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css">
+
+
     <title> @ViewBag.Title</title>
 </head>
 <body>
 @Html.Partial("MenuBar");
 @RenderBody()
+
+<!-- Begin Summernote includes -->
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
+<script src="~/js/Summernote.js" asp-append-version="true"></script>
+<!-- End Summernote includes -->
+
 
 </body>
 </html>
