--- a/MicroSocialPlatform/Views/Profile/GaleryPostPartial.cshtml
+++ b/MicroSocialPlatform/Views/Profile/GaleryPostPartial.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Post
-
+@using MicroSocialPlatform.Misc
 <div class="gallery-item" tabindex="0">
 
-    <img src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=500&h=500&fit=crop" class="gallery-image" alt="">
+    <img src="@IOHelper.imageOrDefault(Model.ImageFilename,IOHelper.DefaultPostImage)" class="gallery-image" alt="">
 
     <div class="gallery-item-type">
 
-        <span class="visually-hidden">Gallery</span><i class="fas fa-clone" aria-hidden="true"></i>
+        <a asp-route="post" asp-route-id = "@Model.Id"><span class="visually-hidden">Gallery</span><i class="fas fa-clone" aria-hidden="true"></i></a>
 
     </div>
 
